tests/union_error_serialize.rs
use edn_derive::Serialize;

#[derive(Serialize)]
union BadType {
    value: usize,
}

fn main() {}
